<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NY Times Search</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detailed_article">DetailedArticleActivity</string>
    <string name="action_search">Search</string>
    <string name="action_filter">Add Filters</string>
    <string name="action_share">Share Link</string>
    <string name="filter_settings">Filter Settings</string>
    <string name="begin_date">Begin Date:</string>
    <string name="end_date">End Date:</string>
    <string name="ok">OK</string>
    <string name="sort_order">Sort Order:</string>
    <string name="arts">Arts</string>
    <string name="fashion_style">Fashion &amp; Style</string>
    <string name="sports">Sports</string>
    <string name="save">Save</string>
    <string-array name="sort">
        <item>oldest</item>
        <item>newest</item>
    </string-array>


</resources>
