<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="300dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/orange">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_action_filter" />

        <TextView
            android:id="@+id/filter_by_date_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:text="@string/filter_settings"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="vertical"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/begin_date"
                android:textColor="@color/orange"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/beginDateEditTxt"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/textbox"
                android:hint="YYYYMMDD"
                android:padding="5dp" />

            <ImageView
                android:id="@+id/beginDateHelperBttn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/date" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/beginDatePickerLayout"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">
            <DatePicker
                android:id="@+id/beginDatePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"/>

            <Button
                android:id="@+id/beginDateOkayBttn"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/app_button"
                android:text="@string/ok"
                android:textColor="@color/white"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:layout_gravity="center_horizontal"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_date"
                android:textColor="@color/orange"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/endDateEditTxt"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/textbox"
                android:hint="YYYYMMDD"
                android:padding="5dp" />

            <ImageView
                android:id="@+id/endDateHelperBttn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/date" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/endDatePickerLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:visibility="gone">
            <DatePicker
                android:id="@+id/endDatePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"/>

            <Button
                android:id="@+id/endDateOkayBttn"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/app_button"
                android:text="@string/ok"
                android:textColor="@color/white"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_order"
                android:textColor="@color/orange"
                android:textStyle="bold"/>

            <Spinner
                android:id="@+id/sortSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"

                android:entries="@array/sort" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_order"
                android:textColor="@color/orange"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/artsCheckbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/arts"
                    android:textColor="@color/orange"
                    android:textStyle="bold"/>
                <CheckBox
                    android:id="@+id/fnsCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fashion_style"
                    android:textColor="@color/orange"
                    android:textStyle="bold"/>

                <CheckBox
                    android:id="@+id/sportsCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sports"
                    android:textColor="@color/orange"
                    android:textStyle="bold"
                    android:buttonTint="@color/orange"/>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/app_button"
            android:text="@string/save"
            android:textColor="@color/white"
            android:paddingLeft="5dp"
            android:paddingRight="10dp"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>
</LinearLayout>